travels can be queried and shown

--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activity.TravelsActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/a_travels_r_travels"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
