--- a/app/src/main/res/layout/fragment_route_editor.xml
+++ b/app/src/main/res/layout/fragment_route_editor.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.RouteEditorMapFragment">
+    tools:context=".fragment.RouteEditorFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <fragment
-            android:id="@+id/fragment_route_editor_map_google_map"
+            android:id="@+id/f_route_editor_f_google_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
     </FrameLayout>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
