--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.TravelFragment"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:id="@+id/f_travel_c_root">
 
     <LinearLayout
         android:layout_width="match_parent"
