--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -39,6 +39,12 @@
             android:layout_height="wrap_content"
             android:text="Edit Route"/>
 
+        <Button
+            android:id="@+id/f_travel_b_view_images"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Images" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
