--- a/app/src/main/res/layout/fragment_route_editor.xml
+++ b/app/src/main/res/layout/fragment_route_editor.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.RouteEditorFragment">
+    tools:context=".fragment.RouteEditorFragment"
+    android:clickable="true">
 
     <FrameLayout
         android:layout_width="match_parent"
