--- a/app/src/main/res/layout/fragment_travel_image.xml
+++ b/app/src/main/res/layout/fragment_travel_image.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.TravelImageFragment"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/f_travel_i_image"
