--- a/app/src/main/res/layout/item_travel_image.xml
+++ b/app/src/main/res/layout/item_travel_image.xml
@@ -7,9 +7,8 @@
     <ImageView
         android:id="@+id/i_travel_image_i_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="@drawable/ic_launcher_background"
+        android:layout_height="200dp"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
