--- a/app/src/main/res/layout/fragment_travel_image.xml
+++ b/app/src/main/res/layout/fragment_travel_image.xml
@@ -35,7 +35,7 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <ViewSwitcher
                     android:id="@+id/f_travel_image_vs_description"
