--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -4,22 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.TravelImageFragment"
-    android:background="#FFFFFF"
-    android:clickable="true">
+    tools:context=".fragment.TravelVideoFragment"
+    android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/f_travel_image_i_image"
+    <VideoView
+        android:id="@+id/f_travel_video_vv_video"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/f_travel_image_c_details"/>
+        app:layout_constraintBottom_toTopOf="@id/f_travel_video_c_details"/>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/f_travel_image_c_details"
+        android:id="@+id/f_travel_video_c_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/f_travel_image_i_image"
+        app:layout_constraintTop_toBottomOf="@id/f_travel_video_vv_video"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -28,7 +27,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/f_travel_image_t_location"
+                android:id="@+id/f_travel_video_t_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Chicago"/>
@@ -38,18 +37,18 @@
                 android:layout_height="match_parent">
 
                 <ViewSwitcher
-                    android:id="@+id/f_travel_image_vs_description"
+                    android:id="@+id/f_travel_video_vs_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/f_travel_image_t_description"
+                        android:id="@+id/f_travel_video_t_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Description"/>
 
                     <EditText
-                        android:id="@+id/f_travel_image_et_description"
+                        android:id="@+id/f_travel_video_et_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Description Edit Text"
@@ -58,7 +57,6 @@
                 </ViewSwitcher>
 
             </ScrollView>
-
 
         </LinearLayout>
 
