--- a/app/src/main/res/layout/fragment_travel_map_view.xml
+++ b/app/src/main/res/layout/fragment_travel_map_view.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.TravelMapViewFragment"
-    android:clickable="true">
+    android:clickable="true"
+    android:id="@+id/f_travel_map_view_c_root">
 
     <FrameLayout
         android:layout_width="match_parent"
