--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.TravelFragment"
     android:background="#FFFFFF"
     android:id="@+id/f_travel_fl_root"
@@ -10,59 +11,62 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/f_travel_c_0">
 
             <Button
                 android:id="@+id/f_travel_b_view_on_map"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="View On Map"/>
+                android:text="View On Map" />
 
             <TextView
                 android:id="@+id/f_travel_t_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Travel Name"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/f_travel_t_start_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Start Date"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/f_travel_t_end_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="End Date"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/f_travel_t_origin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Origin"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/f_travel_t_destination"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Destination"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/f_travel_b_route"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Route"/>
+                android:text="Route" />
 
             <Button
                 android:id="@+id/f_travel_b_view_images"
@@ -74,14 +78,14 @@
                 android:id="@+id/f_travel_b_view_videos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View Videos"/>
+                android:text="View Videos" />
 
             <TextView
                 android:id="@+id/f_travel_t_created_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="00/00/0000"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -96,20 +100,57 @@
                         android:id="@+id/f_travel_t_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Description"/>
+                        android:text="Description" />
 
                     <EditText
                         android:id="@+id/f_travel_et_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Description Edit Text"
-                        android:imeOptions="actionDone" />
+                        android:imeOptions="actionDone"
+                        android:text="Description Edit Text" />
 
                 </ViewSwitcher>
 
             </ScrollView>
 
         </LinearLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/f_travel_c_0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <Button
+                android:id="@+id/f_travel_b_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:id="@+id/f_travel_b_creating_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="50dp"/>
+
+            <Button
+                android:id="@+id/f_travel_b_creating_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="50dp" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
 
     </android.support.constraint.ConstraintLayout>
 
