--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -69,16 +69,16 @@
                 android:text="Route" />
 
             <Button
-                android:id="@+id/f_travel_b_view_images"
+                android:id="@+id/f_travel_b_images"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View Images" />
+                android:text="Images" />
 
             <Button
-                android:id="@+id/f_travel_b_view_videos"
+                android:id="@+id/f_travel_b_videos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View Videos" />
+                android:text="Videos" />
 
             <TextView
                 android:id="@+id/f_travel_t_created_date"
