--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#7b88ff</color>
+    <color name="colorPrimaryDark">#6c5ce7</color>
+    <color name="colorAccent">#fdcb6e</color>
+
+    <color name="commonTextColor">#000000</color>
 </resources>
