--- a/app/src/main/res/layout/item_travel.xml
+++ b/app/src/main/res/layout/item_travel.xml
@@ -13,19 +13,22 @@
             android:id="@+id/i_travel_t_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Travel Name"/>
+            android:text="Travel Name"
+            android:textColor="@color/commonTextColor"/>
 
         <TextView
             android:id="@+id/i_travel_t_start_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start Date"/>
+            android:text="Start Date"
+            android:textColor="@color/commonTextColor"/>
 
         <TextView
             android:id="@+id/i_travel_t_end_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="End Date"/>
+            android:text="End Date"
+            android:textColor="@color/commonTextColor"/>
 
     </LinearLayout>
 
