--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,30 +16,35 @@
             android:id="@+id/f_register_et_first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/commonTextColor"
             android:hint="First Name"/>
 
         <EditText
             android:id="@+id/f_register_et_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/commonTextColor"
             android:hint="Last Name"/>
 
         <EditText
             android:id="@+id/f_register_et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/commonTextColor"
             android:hint="Email"/>
 
         <EditText
             android:id="@+id/f_register_et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/commonTextColor"
             android:hint="Password"/>
 
         <Button
             android:id="@+id/f_register_b_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/commonTextColor"
             android:text="Register"/>
 
     </LinearLayout>
