--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:text="Add Travel"
             app:layout_constraintTop_toBottomOf="@id/a_travels_r_travels"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:backgroundTint="@color/commonButtonColor"/>
 
     </android.support.constraint.ConstraintLayout>
 
