--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -45,7 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:text="Register"/>
+            android:text="Register"
+            android:backgroundTint="@color/commonButtonColor"/>
 
     </LinearLayout>
 
