--- a/app/src/main/res/layout/fragment_travel_images.xml
+++ b/app/src/main/res/layout/fragment_travel_images.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Image"
+            android:backgroundTint="@color/commonButtonColor"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
