--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -31,7 +31,8 @@
                 android:id="@+id/f_travel_video_b_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete"/>
+                android:text="Delete"
+                android:backgroundTint="@color/deleteButtonColor"/>
 
             <TextView
                 android:id="@+id/f_travel_video_t_location"
