--- a/app/src/main/res/layout/fragment_travel_videos.xml
+++ b/app/src/main/res/layout/fragment_travel_videos.xml
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             android:text="Add Video"
             app:layout_constraintTop_toBottomOf="@+id/f_travel_videos_r_videos"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:backgroundTint="@color/commonButtonColor"/>
 
     </android.support.constraint.ConstraintLayout>
 
