--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#fdcb6e</color>
 
     <color name="commonTextColor">#000000</color>
+    <color name="commonButtonColor">#fdcb6e</color>
+    <color name="deleteButtonColor">#FF2222</color>
 </resources>
