--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
-    android:id="@+id/a_login_c_root">
+    android:id="@+id/a_login_c_root"
+    android:padding="20dp"
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,24 +28,32 @@
             android:textColor="@color/commonTextColor"
             android:hint="Password"/>
 
-        <Button
-            android:id="@+id/a_login_btn_sign_in"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sign in"
-            android:backgroundTint="@color/commonButtonColor"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/a_login_btn_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Register"
-            android:backgroundTint="@color/commonButtonColor"/>
+            <Button
+                android:id="@+id/a_login_btn_sign_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="50dp"
+                android:text="Sign in"
+                android:backgroundTint="@color/commonButtonColor"/>
+
+            <Button
+                android:id="@+id/a_login_btn_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="50dp"
+                android:text="Register"
+                android:backgroundTint="@color/commonButtonColor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </RelativeLayout>
 
     </LinearLayout>
-
-
 
 </android.support.constraint.ConstraintLayout>
