--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/f_travel_t_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:hint="Name"
                     android:textSize="20sp"
                     android:textColor="@color/commonTextColor"/>
 
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:imeOptions="actionDone"
-                    android:text="Edit Text"
+                    android:hint="Edit Text"
                     android:textSize="20sp"
                     android:textColor="@color/commonTextColor"/>
 
@@ -58,7 +58,7 @@
                 android:id="@+id/f_travel_t_start_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Start Date"
+                android:hint="Start Date"
                 android:textSize="20sp"
                 android:textColor="@color/commonTextColor"/>
 
@@ -66,7 +66,7 @@
                 android:id="@+id/f_travel_t_end_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="End Date"
+                android:hint="End Date"
                 android:textSize="20sp"
                 android:textColor="@color/commonTextColor"/>
 
@@ -128,7 +128,8 @@
                         android:id="@+id/f_travel_t_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Description"
+                        android:hint="Description"
+                        android:textSize="15sp"
                         android:textColor="@color/commonTextColor"/>
 
                     <EditText
@@ -137,7 +138,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="text"
                         android:imeOptions="actionDone"
-                        android:text="Edit Text"
+                        android:hint="Description"
                         android:textColor="@color/commonTextColor"/>
 
                 </ViewSwitcher>
