--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
     android:id="@+id/a_login_c_root"
-    android:padding="20dp"
-    android:background="@color/colorPrimaryDark">
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
